[tool.poetry]
name = "test-driven-tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["HundredVisionsGuy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
